test/tests/errors/error-class-no-rec-func.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        rec func x(): int {
            1
        }
    }
}